[package]
name = "genebears"
version = "0.1.0"
edition = "2021"
authors = [
    "Felix Wiegand <felix.wiegand@tu-dortmund.de>",
]
description = "Lightweight Rust client for the GeneBe genetic variant annotation API with DuckDB caching and rate limiting"
license = "MIT"
readme = "README.md"
keywords = ["genetics", "bioinformatics", "variants", "annotation", "genomics"]
categories = ["science", "api-bindings"]
repository = "https://github.com/koesterlab/genebears"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
duckdb = { version = "1.10500", features = ["bundled"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tracing-subscriber = "0.3"
tempfile = "3"
